# sdk

./: .gitignore  README.md  build.gradle.kts  build.sh  settings.gradle.kts
.github/workflows/: release_on_push.yml
app/: .gitignore  build.gradle.kts
bridge/: build.gradle.kts
bridge-core/: build.gradle.kts
bridge-settings/: build.gradle.kts
bridge-settings/react-app/: index.html
bridge-settings/react-app/src/: App.tsx
bridge-settings/react-app/src/components/: ActionButton.tsx  AppSettings.tsx  ConnectionStatus.tsx  ESimSettings.tsx  LogViewer.tsx  MABLStatus.tsx  Slider.tsx  SystemSettings.tsx  SystemStatus.tsx  TextInput.tsx  ToggleSwitch.tsx
bridge-settings/react-app/src/hooks/: useSettings.ts  useWebSocket.ts
bridge-settings/react-app/src/services/: websocketService.ts
bridge-settings/react-app/src/styles/: index.css
bridge-settings/react-app/src/types/: settings.ts
bridge-shared/: build.gradle.kts
bridge-shell/: build.gradle.kts
bridge-system/: build.gradle.kts
bridge-system/src/main/: AndroidManifest.xml
bridge/src/main/: AndroidManifest.xml
bridge_priv_rs/: Cargo.toml  build.rs  build.sh
bridge_priv_rs/proto/: ipc.proto
bridge_priv_rs/src/: connection.rs  error.rs  lib.rs  main.rs
bridge_priv_rs/src/state/: http.rs  mod.rs  websocket.rs
bridge_priv_rs/src/state/util/: mod.rs
bridge_priv_rs/tests/: connection.rs  http.rs  tcp_utils.rs  websocket.rs
cli/: build.gradle.kts
config/pinitd/: bridge_priv_service.unit  bridge_service.unit  bridge_system_service.unit  mabl.unit
example/: build.gradle.kts
example/src/main/: AndroidManifest.xml
frida/src/: index.ts
frida/src/hooks/: cli-callbacks.ts  network.ts
gradle/: libs.versions.toml
sdk/: build.gradle.kts
(+113 files in other folders)
