[package]
name = "bridge_priv_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
prost = "0.12"
bytes = "1.0"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
http = "0.2.12"

[build-dependencies]
prost-build = "0.12"
